Version mobile + estetica de favorite + Falta implementacion + hot-fix-html and tailwindCSS

--- a/pokemon-async/src/assets/generator.css
+++ b/pokemon-async/src/assets/generator.css
@@ -1,19 +1,9 @@
 
-main {
-  margin-left: 24px;
-  margin-top: 24px;
-}
-
-
 
 #Card-Img {
   transform: scaleX(-1);
 }
 
-#btn {
-  left: 143px;
-  margin-top: 154px;
-}
 
 .background-Game {
   margin-left: 6px;
@@ -25,6 +15,15 @@ main {
   height: 87px;
   left: 7.15rem;
   top: 2.82rem;
+}
+
+.rotate {
+  transform: rotate(225deg);
+}
+
+#btn {
+  bottom: 0;
+  
 }
 
 .start-text {
@@ -58,7 +57,7 @@ main {
   height: 40vh;
   /*outline: 1px solid red;*/
   border: 4px solid transparent;
-  border-radius: 4px;
+  border-radius: 1px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -66,29 +65,12 @@ main {
   align-items: center;
 }
 
-.demo {
-  /*background-image:
-        linear-gradient(white, white),
-        linear-gradient(180deg, cornflowerblue, purple);*/
-
-  background-image:
-    linear-gradient(black, black),
-    linear-gradient(270deg, #00D7B9, #B95DD7 50%, #FFB367 100%);
-
-  background-repeat: no-repeat;
-  background-origin: padding-box, border-box;
-  text-align: center;
-
-  border-radius: 4px;
-}
-
 .animated {
   background-image:
     linear-gradient(black, black),
     linear-gradient(180deg, red, grey 50%, white);
   background-repeat: no-repeat;
-  background-size: 100% 100%, 100% 200%;
-  background-position: 0 0, 0 100%;
+  background-position: 0 0, 0 99%;
   background-origin: padding-box, border-box;
   animation: highlight 3s infinite alternate;
 }
